tests/esproposal_class_instance_fields.ignore/esproposal_class_instance_fields.ignore.exp
Error -------------------------------------------------------------- test.js:7:3

Error: test.js:7
  7:   [computed]: string;
       ^^^^^^^^^^^^^^^^^^^ Computed property keys not supported.


Found 1 error
